--- a/index.html
+++ b/index.html
@@ -11,39 +11,57 @@
         crossorigin="anonymous">
     <!-- Bootswatch -->
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
+    <!-- customCSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <!-- Header with Weather App display -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center">
         <a class="navbar-brand">Weather App</a>
-        </button>
     </nav>
-
     <!-- Side Card for storing previous searches and search functionality -->
-    <div class="card bg-secondary mb-3" style="max-width: 20rem; height: 35rem;">
-        <div class="card-header"><b>Search for a City:</b></div>
-        <div class="card-body">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div class="card bg-secondary mb-3" style="max-width: 20rem; height: 35rem;">
+                    <div class="card-header"><b>Search for a City:</b></div>
+                    <div class="card-body">
+                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <form class="form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <!-- Container for Weather Data -->
+            <div class="col-9">
+                <div class="jumbotron">
+                    <h1 class="display-3"><b>City Name Will Go Here</b></h1>
+                    <p class="lead">The current temperature, humidity percentage, wind-speed, and UV-index are displayed
+                        below.
+                    </p>
+                    <hr class="my-4">
+                    <p class="temperature" id="temperature">Current Temperature:</p>
+                    <p class="humidity" id="humidity">Humidity:</p>
+                    <p class="wind-speed" id="wind-speed">Wind Speed:</p>
+                    <!-- button id is for the spot where UV-index will display  -->
+                    <p class="uv-index" id="uv-index">UV-Index:</p>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-    <!-- Container for Weather Data -->
-    <div class="jumbotron">
-        <h1 class="display-3"><b>City Name Will Go Here</b></h1>
-        <p class="lead">The current temperature, humidity percentage, wind-speed, and UV-index are displayed below.</p>
-        <hr class="my-4">
-        <p class="temperature">Current Temperature:</p>
-        <p class="humidity">Humidity:</p>
-        <p class="wind-speed">Wind Speed:</p>
-        <p class="uv-index" id="button">UV-Index:</p>
-        </p>
-
-    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
