--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     <!-- customCSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- jQuery -->
+    <!-- jQuery and Bootstrap JS links -->
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+        </script>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-center">
         <a class="navbar-brand">Weather App</a>
     </nav>
-    <!-- Side Card for storing previous searches and search functionality -->
-    <div class="container">
+    <!-- Side Card for searching cities, storing previous searches and search functionality -->
+    <div class="container-fluid">
         <div class="row">
             <div class="col-3">
                 <div class="card bg-secondary mb-3" style="max-width: 20rem; height: 35rem;">
@@ -36,8 +36,11 @@
                     <div class="card-body">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                             <form class="form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                                <!-- Search bar. Does not display properly on different screen sizes -->
+                                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-bar">
                                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                                <ul id="previous-searches">
+                                </ul>
                             </form>
                         </nav>
                     </div>
@@ -58,10 +61,63 @@
                     <p class="uv-index" id="uv-index">UV-Index:</p>
                     </p>
                 </div>
+                <!-- bottom card with 5 day forecast -->
+                <div class="jumbotron">
+                    <h1 class="display-3">The Rest of Your Week's Forecast</h1>
+                    <hr class="my-4">
+                    <div class="row row-cols-1 row-cols-md-4 g-4">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                    <h4>Date</h4>
+                                    <p>Temp:</p>
+                                    <p>Humidity:</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <h4>Date</h4>
+                                    <p>Temp:</p>
+                                    <p>Humidity:</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <h4>Date</h4>
+                                    <p>Temp:</p>
+                                    <p>Humidity:</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <h4>Date</h4>
+                                    <p>Temp:</p>
+                                    <p>Humidity:</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <scrip src="script.js"></scrip>
 </body>
 
 </html>
