--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
         </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-        </script>
+        </script> -->
 </head>
 
 <body>
@@ -35,13 +35,13 @@
                     <div class="card-header"><b>Search for a City:</b></div>
                     <div class="card-body">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <form class="form-inline my-2 my-lg-0">
+                            <div class="form-inline my-2 my-lg-0">
                                 <!-- Search bar. Does not display properly on different screen sizes -->
-                                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-bar">
-                                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-input">
+                                <button class="btn btn-secondary my-2 my-sm-0" id="search-bar">Search</button>
                                 <ul id="previous-searches">
                                 </ul>
-                            </form>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -49,27 +49,27 @@
             <!-- Container for Weather Data -->
             <div class="col-9">
                 <div class="jumbotron">
-                    <h1 class="display-3"><b>City Name Will Go Here</b></h1>
+                    <h1 class="display-3" id="city-name"></h1>
                     <p class="lead">The current temperature, humidity percentage, wind-speed, and UV-index are displayed
                         below.
                     </p>
                     <hr class="my-4">
-                    <p class="temperature" id="temperature">Current Temperature:</p>
-                    <p class="humidity" id="humidity">Humidity:</p>
-                    <p class="wind-speed" id="wind-speed">Wind Speed:</p>
+                    <p class="temperature" id="temperature"></p>
+                    <p class="humidity" id="humidity"></p>
+                    <p class="wind-speed" id="wind-speed"></p>
                     <!-- button id is for the spot where UV-index will display  -->
-                    <p class="uv-index" id="uv-index">UV-Index:</p>
+                    <p class="uv-index" id="uv-index"></p>
                     </p>
                 </div>
                 <!-- bottom card with 5 day forecast -->
                 <div class="jumbotron">
-                    <h1 class="display-3">The Rest of Your Week's Forecast</h1>
+                    <h1 class="display-3">Your Week's Forecast</h1>
                     <hr class="my-4">
                     <div class="row row-cols-1 row-cols-md-4 g-4">
                         <div class="col">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Day</h5>
                                     <p class="card-text">
                                     <h4>Date</h4>
                                     <p>Temp:</p>
@@ -81,7 +81,7 @@
                         <div class="col">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Day</h5>
                                     <p class="card-text"></p>
                                     <h4>Date</h4>
                                     <p>Temp:</p>
@@ -92,7 +92,7 @@
                         <div class="col">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Day</h5>
                                     <p class="card-text"></p>
                                     <h4>Date</h4>
                                     <p>Temp:</p>
@@ -103,7 +103,7 @@
                         <div class="col">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Day</h5>
                                     <p class="card-text"></p>
                                     <h4>Date</h4>
                                     <p>Temp:</p>
@@ -117,7 +117,7 @@
         </div>
     </div>
 
-    <scrip src="script.js"></scrip>
+    <script src="script.js"></script>
 </body>
 
 </html>
